Thu May 25 21:36:40 1995  Theodore Y. Ts'o  (tytso@dcl)

	* pre.in(HOST_TYPE, SHEXT, DO_MAKE_SHLIB): Added variables filled
		in by configure 

Wed May 24 15:42:02 1995  Theodore Y. Ts'o  (tytso@dcl)

	* config.guess, config.sub: Added for shared library support.

Mon May 22 09:45:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in	- Add gssapi to list of subdirectories.

Thu Apr 27 13:50:59 1995  Mark Eichin  <eichin@cygnus.com>

	* pre.in (KRB4): remove, unused.

Wed Apr 26 14:27:03 1995 Keith Vetter (keithv@fusion.com)

	* post.in: added target check-windows.
	* ren2long, ren2long.awk: scripts to rename DOS 8.3 names back
	   to their proper longer names.

Thu Apr 20 20:00:42 1995  Theodore Y. Ts'o  (tytso@dcl)

	* post.in: The .depend production rule now does even more
		cannonicalization of the generated dependencies.

	* post.in: cc should be $(CC)

Tue Apr 18 09:36:00 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* post.in (.depend, depend): Add production for creating the
		.depend file, and updating the Makefile.in with the
		new dependencies.

Thu Apr 13 16:20:28 1995 Keith Vetter (keithv@fusion.com)

	* windows.in: compile with stdc extensions enabled versus
           strict stdc adherence.

Tue Mar 28 17:58:55 1995  John Gilmore  (gnu at toad.com)

	* mac-config.cache:  Correct some entries.
	* mac-mf.sed:  Improve conversion of pathnames, $(srcdir),
	support linking MPW tools (for make check, kinit).
	* mac-pre.in (.c.o):  Add -sym on for debugging.
	(LDFLAGS):  Remove ToolLibs.o.
	(RANLIB, ARCHIVE):  Make these work.
	(MAKE):  Make recursive makes work, with BuildProgram.

Thu Mar 16 20:55:18 1995  John Gilmore  (gnu at toad.com)

	First cut at Macintosh configuration support.

	* mac-config.cache:  New file, a hand-built autoconf `config.cache'
	file with the right values for building under MPW.
	* mac-config.README:  Documentation for mac-config.cache.
	* mac-pre.in, mac-post.in:  Versions of pre.in and post.in for 
	configuring on MPW.