@@ -24,17 +24,19 @@ INSTALL=@INSTALL@
 INSTALL_PROGRAM=@INSTALL_PROGRAM@ -s
 INSTALL_DATA=@INSTALL_DATA@
 INSTALL_SETUID=$(INSTALL) -s -m 4755
+INSTALL_PREFIX=@prefix@
+INSTALL_EXEC_PREFIX=@exec_prefix@
 
-KRB5MANROOT = $(KRB5ROOT)/man
-ADMIN_BINDIR = $(KRB5ROOT)/admin
-SERVER_BINDIR = $(KRB5ROOT)/sbin
-CLIENT_BINDIR = $(KRB5ROOT)/bin
+KRB5MANROOT = $(INSTALL_PREFIX)/man
+ADMIN_BINDIR = $(INSTALL_PREFIX)/admin
+SERVER_BINDIR = $(INSTALL_EXEC_PREFIX)/sbin
+CLIENT_BINDIR = $(INSTALL_EXEC_PREFIX)/bin
 ADMIN_MANDIR = $(KRB5MANROOT)/man8
 SERVER_MANDIR = $(KRB5MANROOT)/man8
 CLIENT_MANDIR = $(KRB5MANROOT)/man1
 FILE_MANDIR = $(KRB5MANROOT)/man5
-KRB5_LIBDIR = $(KRB5ROOT)/lib
-KRB5_INCDIR = $(KRB5ROOT)/include
+KRB5_LIBDIR = $(INSTALL_PREFIX)/lib
+KRB5_INCDIR = $(INSTALL_PREFIX)/include
 KRB5_INCSUBDIRS = \
 	$(KRB5_INCDIR)/krb5 \
 	$(KRB5_INCDIR)/asn.1 \
