@@ -1,3 +1,9 @@
+Wed Jun  7 16:08:35 1995    <tytso@rsx-11.mit.edu>
+
+	* pre.in: Use the GNU/configure standard method of prefix and
+		exec_prefix to determine where programs get installed.
+		The use of KRB5ROOT is obsolete.
+
 Thu May 25 21:36:40 1995  Theodore Y. Ts'o  (tytso@dcl)
 
 	* pre.in(HOST_TYPE, SHEXT, DO_MAKE_SHLIB): Added variables filled
